<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp">
        <Space android:layout_width="match_parent" android:layout_height="80dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/username"
            android:background="@drawable/bg_input"
            android:paddingHorizontal="10dp"
            android:textColor="@color/text_dark"
            android:textColorHint="#88000000"
            android:inputType="text"
            android:autofillHints="username"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:background="@drawable/bg_input"
            android:paddingHorizontal="10dp"
            android:textColor="@color/text_dark"
            android:textColorHint="#88000000"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/bg_btn_green"
            android:contentDescription="@string/login"/>

        <TextView
            android:id="@+id/tvNeedAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_account"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/need_account"/>
    </LinearLayout>
</ScrollView>
