<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_back"
            android:background="@drawable/bg_card_blue"
            android:contentDescription="@string/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upgrade"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="your experience"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_card_blue"
            android:padding="20dp"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Starter"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/improved_quiz_gen"
                android:textColor="@color/white_70"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btnStarter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/purchase"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/bg_btn_green"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_card_blue_deep"
            android:padding="20dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Intermediate"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_seller"
                    android:textColor="@color/text_dark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@drawable/bg_best_seller"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/improved_quiz_gen"
                android:textColor="@color/white_70"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/btnIntermediate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/purchase"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/bg_btn_green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_card_blue"
            android:padding="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Advanced"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/improved_quiz_gen"
                android:textColor="@color/white_70"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/btnAdvanced"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/purchase"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/bg_btn_green"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
    </LinearLayout>
</ScrollView>
